@startuml

title __SERVER's Class Diagram__\n

  namespace Server {
    class Server.HandlerThread {
        - clientSocket : Socket
        - inputStream : InputStream
        - login : String
        - outputStream : OutputStream
        + HandlerThread()
        + dodajDoKoszyka()
        + dodajZamowienie()
        + handleaktualizujMagazyn()
        + handledodajDostawe()
        + handledodajLek()
        + handledodajOferte()
        + handledodajSurowiec()
        + handlewystawFakture()
        + lek()
        + oferty()
        + pokazZamowienia()
        + run()
        + szczegoloweZamowienie()
        + usunKlienta()
        + usunKoszyk()
        + wyswietlKlientow()
        + wyswietlKoszyk()
        + wyswietlPracownikow()
        + zmianaHaslaKlienta()
        - handleClientSocket()
        - handleDodajDostawce()
        - handleDodajPracownika()
        - handleLogin()
        - handleRecoveryHasla()
        - handleRegistration()
        - handleStanowisko()
        - handleText()
        - handleUsun()
        - handleUsun1()
        - handleWyswietl()
        - handleWyswietl1()
        - handleWyswietlPomocniczedoListy()
        - handleZmianaHasla()
        - handleZmienDateRealizacjiZamowienia()
        - handleZmienStanZamowienia()
        - handleZmienWyplate()
        - handlezablokujOdblokujKonto()
    }
  }
  

  namespace Server {
    class Server.ServerColections {
        - serverPort : int
        - workerList : ArrayList<HandlerThread>
        + ServerColections()
        + removeWorker()
        + run()
    }
  }
  

  namespace Server {
    class Server.ServerMain {
        {static} + main()
    }
  }
  

  Server.HandlerThread o-- baza.Baza_danych : baza
  Server.HandlerThread o-- Server.ServerColections : serverColections


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
